# MPHF-Experiments

./: .gitmodules  CMakeLists.txt  README.md  spack.yaml
.github/workflows/: build.yml
contenders/bucketplacement/: CopphicContender.cpp  CopphicContender.h  PTHashContender.cpp  PTHashContender.h  PartitionedPTHashContender.cpp  PartitionedPTHashContender.h  PhobicContender.cpp  PhobicContender.h  RustPhastContender.cpp  RustPhastContender.h  RustPhastPlusContender.cpp  RustPhastPlusContender.h  RustPhastPlusWrappedContender.cpp  RustPhastPlusWrappedContender.h
contenders/shockhash/: BipartiteShockHashContender.cpp  MorphisHashContender.cpp  MorphisHashFlatContender.cpp
lib/: Contender.cpp  Contender.h  PerformanceCounter.h
rust/: Cargo.toml
rust/src/: lib.rs  phast_contender.rs  phast_plus_contender.rs  phast_plus_wrapped_contender.rs
scripts/: scatterplot100M.sh
scripts/dockerVolume/: table-thesis-lehmann.tex
src/: comparison.cpp  scalingSurvey.cpp  scalingThesisLehmann.cpp  tableCopphic.cpp  tableMorphisHash.cpp  tablePHast.cpp  tablePhobic.cpp  tablePtrHash.cpp  tableSurvey.cpp  tableThesisLehmann.cpp
